--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.1",
 	"description": "A robust iso-8859-6 encoder/decoder written in JavaScript.",
 	"homepage": "http://mths.be/iso-8859-6",
-	"main": "iso88596.js",
+	"main": "iso-8859-6.js",
 	"keywords": [
 		"codec",
 		"decoder",
@@ -43,7 +43,7 @@
 	},
 	"files": [
 		"LICENSE-MIT.txt",
-		"iso88596.js"
+		"iso-8859-6.js"
 	],
 	"directories": {
 		"test": "tests"
